Add user model with mongoose and bcrypt. Write unit tests and mocks using mongodb-memory-server, faker, and jest. Update openapi.yaml to use our new user route/service/controller. Create bash script to run mongo using docker while in dev env.
