# config/openapi.yml
@@ -15,8 +15,9 @@ servers:
 tags:
   - name: greeting
     description: Greeting APIs
+  - name: user
+    description: User APIs
   
-
 paths:
   /hello:
     get:
@@ -53,12 +54,62 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HelloResponse'
-
+  /user:
+    post:
+      summary: Create User
+      tags:
+        - user
+      operationId: createUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: false
+              required:
+                - email
+                - password
+                - name
+              properties:
+                email:
+                  type: string
+                  format: email
+                password:
+                  type: string
+                name:
+                  type: string
+      responses:
+        201:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: false
+                required:
+                  - userId
+                properties:
+                  userId:
+                    type: string
+        409:
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
 components:
   securitySchemes:
     bearerAuth:
       type: http
       scheme: bearer
+      
   schemas:
     HelloResponse:
       type: object
@@ -67,4 +118,15 @@ components:
         - message
       properties:
         message:
+          type: string
+    FailResponse:
+      type: object
+      additionalProperties: false
+      required:
+        - success
+        - error
+      properties:
+        success:
+          type: boolean
+        error:
           type: string
