# src/api/controllers/user.ts
@@ -1,7 +1,8 @@
 import * as express from 'express';
 
-import UserService from '@exmpl/api/services/user';
+import UserService, { ErrorResponse } from '@exmpl/api/services/user';
 import { writeJsonResponse } from '@exmpl/utils/express';
+import logger from '@exmpl/utils/logger';
 
 export function auth(req: express.Request, res: express.Response, next: express.NextFunction): void {
 
@@ -27,12 +28,54 @@ export function auth(req: express.Request, res: express.Response, next: express.
 
     })
     .catch((err: any) => {
-      // console.log(err)
+      
       writeJsonResponse(res, 500, {
         error: {
           type: 'internal_server_error',
           message: 'Internal server error'
         }
-      })
+      });
+
+    });
+}
+
+export function createUser(req: express.Request, res: express.Response): void {
+
+  const { email, password, name } = req.body;
+
+  UserService.createUser(email, password, name)
+    .then(createUserResponse => {
+
+      if((createUserResponse as any).error){
+
+        if((createUserResponse as ErrorResponse).error.type === 'account_already_exists') {
+
+          writeJsonResponse(res, 409, createUserResponse);
+
+        } else {
+
+          throw new Error(`unsupported ${createUserResponse}`);
+
+        }
+
+      } else {
+
+        writeJsonResponse(res, 201, createUserResponse);
+
+      }
+
     })
+    .catch((err: any) => {
+
+      logger.error(`createUser: ${err}`);
+
+      writeJsonResponse(res, 500, {
+        error: {
+          type: 'internal_server_error',
+          message: 'Internal server error'
+        }
+      });
+
+    });
+
 }
